Añadimos la posibilidad de editar el estado